[css-grid] Fix height computation for items with intrinsic aspect ratios

We were not computing the height properly for items spanning content
or flexible sized tracks having intrinsic aspect ratios because we were
returning always the "natural" size, meaning that on an image of 100x50
we're always returning 50, even if the image had a specified width.

This change allowed us also to remove a bunch of code imported from flexbox
renderer which is actually not really needed in grid.

BUG=592975

Review URL: https://codereview.chromium.org/1778853002

Cr-Commit-Position: refs/heads/master@{#382287}

Former-commit-id: f76b5035ab7d677198849bff6cd5c3aa17d78468